# vicon

./: .gitignore  .travis.yml  README  README.md
ipc/client/: Makefile
ipc/client/src/: vicon_ipc_test.cpp
ipc/server/: Makefile
ipc/server/src/: vicon_ipc.cpp
ipc/xdr/: ViconTypes.xdr
libvicon_driver/: CMakeLists.txt  Makefile
libvicon_driver/include/: ViconCalib.h  ViconDriver.h
libvicon_driver/src/: vicon_calib.cpp  vicon_driver.cpp
libvicon_driver/vicon_sdk/MacOSX/: libViconDataStreamSDK_CPP.dylib
ros/vicon/: CMakeLists.txt  libvicon_driver  mainpage.dox  manifest.xml  package.xml
ros/vicon/calib/: Identity.yaml
ros/vicon/launch/: calibrate.launch  vicon.launch
ros/vicon/src/: ViconSubjectPublisher.cpp  test.cpp  vicon.cpp  vicon_calibrate.cpp
ros/vicon/srv/: SetPose.srv
ros/vicon_odom/: CMakeLists.txt  mainpage.dox  manifest.xml
ros/vicon_odom/include/vicon_odom/: filter.h
ros/vicon_odom/launch/: ViconOdom.launch  ViconOdomIPC.launch  test.launch
ros/vicon_odom/src/: filter.cpp  vicon_odom.cpp
vicon/: CMakeLists.txt  package.xml
vicon/conf/: QuadrotorCalib.yaml
vicon/include/vicon/: ViconSubjectPublisher.h  ViconVelocity.h
vicon/launch/: calibrate.launch  convert_bag.launch  markers.launch  vicon.launch  visualize_markers.launch
vicon/msg/: Marker.msg  Markers.msg  Subject.msg
vicon/src/: bag_reader.cpp  markers.cpp  vicon.cpp  vicon_calibrate.cpp  visualize_markers.cpp
vicon_driver/: CMakeLists.txt  Makefile-no-ros  Makefile-old  package.xml
vicon_driver/include/vicon_driver/: ViconCalib.h  ViconDriver.h  vicon_calib.h  vicon_driver.h
vicon_driver/src/: vicon_calib.cpp  vicon_driver.cpp
vicon_driver/test/: Makefile
vicon_driver/vicon_sdk/Linux32/: Client.h
vicon_odom/: CMakeLists.txt  package.xml
vicon_odom/include/vicon_odom/: filter.h  vicon_odom.hpp  vicon_odom_node.hpp
vicon_odom/launch/: ViconOdom.launch  test.launch  vicon_odom.launch
vicon_odom/src/: filter.cpp  vicon_odom.cpp  vicon_odom_main.cpp  vicon_odom_node.cpp
