<?xml version="1.0"?>
<package>
  <name>vicon</name>
  <version>0.0.2</version>
  <description>The vicon package</description>
  <maintainer email="kmohta@seas.upenn.edu">Kartik Mohta</maintainer>
  <maintainer email="quchao@seas.upenn.edu">Chao Qu</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
